fix compilation errors on java 23